# Gym

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  =1.26  AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  CONTRIBUTING.md  EXPERIMENT_LOG.md  How to Start.md  README.md  README_new.md  TUTORIAL_TEST_RESULTS.md  VALIDATE_LAYER_A.md  VALIDATE_LAYER_B.md  benchmark_nanov3.py  claude_code_rollout.jsonl  claude_code_rollout_aggregate_metrics.json  claude_code_rollout_materialized_inputs.jsonl  cube_osworld_rollouts_aggregate_metrics.json  cube_osworld_rollouts_materialized_inputs.jsonl  design-note.md  env.yaml  errors.json  eval-ray.sub  eval.sub  get_scores_reasoning_v2.py  grpo-workplace-assistant-nemotron-nano-v2-9b.md  gym_switchyard_integration.md  hermes_agent_rollout.jsonl  hermes_agent_rollout_aggregate_metrics.json  inference.py  load_lcb_dataset.py  my_results.jsonl  nvidia_smi_cluster.py  pr_coding.sh  pyproject.toml  results.jsonl  rl-training-with-nemo-rl.md  run_aviary.txt  (+5 more)
resources_servers/osworld/: README.md  __init__.py  app.py  config.py  eval_task.py  local_forwarder.py  models.py  pyproject.toml  requirements.txt  session_manager.py
resources_servers/osworld/configs/: opensandbox_osworld.yaml  osworld.yaml
resources_servers/osworld/data/: calc_domain.jsonl  example.jsonl  gimp_domain.jsonl  impress_domain.jsonl  os_domain.jsonl  smoke.jsonl  test_nogdrive.jsonl  thunderbird_domain.jsonl  vs_code_domain.jsonl  writer_domain.jsonl
resources_servers/osworld/tests/: test_app.py
resources_servers/vlm_eval_kit_audio/: README.md  app.py  generate_example_data.py  generate_video_example_data.py  prepare_data.py  pyproject.toml  reuse_scoring.py  rewrite_scoring.py
resources_servers/vlm_eval_kit_audio/configs/: mmau100.yaml  mmau5.yaml  reuse_pilot.yaml  smoke.yaml  video_smoke.yaml  vlm_eval_kit_audio.yaml  voicebench.yaml
resources_servers/vlm_eval_kit_audio/data/: .gitignore  example.jsonl  example_metrics.json  video_example.jsonl  video_example_metrics.json
resources_servers/vlm_eval_kit_audio/tests/: test_app.py
responses_api_agents/cube_agent/: app.py  pyproject.toml
responses_api_agents/cube_agent/configs/: cube_agent.yaml
responses_api_agents/cube_agent/cube_agent_ng/: __init__.py
responses_api_agents/cube_agent/tests/: test_app.py  test_cube_agent.py  test_last_n_obs.py
responses_api_agents/osworld_agent/: DESIGN.md  NEMOTRON-V3-MIGRATION.md  README.md  action_parser.py  adapter_agents.py  app.py  client.py  native_agents.py  pointer_runtime.py  prompts.py  proxy.py  pyproject.toml  remote_environment.py  requirements.txt  runner_registry.py  sandbox_desktop_env.py  sandbox_provider.py
responses_api_agents/osworld_agent/configs/: osworld_agent.yaml  osworld_agent_m3.yaml  osworld_agent_native_prompt_agent.yaml  osworld_agent_nemotron_v3.yaml  osworld_agent_omni_mini.yaml  osworld_agent_omni_mini_local_reference.yaml  osworld_agent_omni_mini_parity.yaml  osworld_agent_pointer.yaml
responses_api_agents/osworld_agent/data/: .gitignore  example_metrics.json
responses_api_agents/osworld_agent/scripts/: README.md  bringup_local_host.sh  bringup_remote_host.sh  check_task_input_parity.py  check_upstream_contract.py  inspect_prenyx_b200.sh  launch_omni_mini_vllm.sh  paper_to_gym_jsonl.py  preflight_osworld_run.py  prepare_osworld_vm.sh  probe_omni_mini_vllm.py  run_m3_multienv.sh  run_multienv_osworld_agent.sh  run_native_prompt_agent_smoke.sh  run_omni_mini_local_vllm.sh  run_omni_mini_vllm.sh  setup_colossus_runtime.sh  start_omni_mini_vllm_prenyx.sh  watch_omni_mini_vllm_prenyx.sh
responses_api_agents/osworld_agent/tests/: test_adapter_agents.py  test_app.py  test_client.py  test_native_agents.py  test_pointer_runtime.py  test_proxy.py  test_run_scripts.py  test_runner_registry.py  test_sandbox_provider.py  test_task_input_parity.py
responses_api_models/local_sglang_model/: README.md  app.py  pyproject.toml  setup.py
responses_api_models/local_sglang_model/configs/: local_sglang_model.yaml
responses_api_models/local_sglang_model/tests/: test_app.py
responses_api_models/local_vllm_model/: README.md  app.py  local_vllm_model_actor.py  pyproject.toml  setup.py  vllm_patches.py
responses_api_models/local_vllm_model/configs/: Qwen3-30B-A3B-Instruct-2507.yaml  local_vllm_model.yaml  multiple_models_at_once.yaml  nano_v3_single_node.yaml  nemotron_3_super_dev.yaml  pretrain_text_completion.yaml  qwen3_235b_a22b_instruct_2507.yaml
responses_api_models/local_vllm_model/configs/MiniMaxAI/: MiniMax-M3.yaml
responses_api_models/local_vllm_model/configs/Qwen/: Qwen2.5-Coder-32B-Instruct.yaml  Qwen3-235B-A22B-Instruct-2507-FP8.yaml  Qwen3-30B-A3B-Instruct-2507.yaml  Qwen3-30B-A3B-Thinking-2507.yaml  Qwen3-4B-completions.yaml  Qwen3.5-122B-A10B.yaml  Qwen3.5-27B.yaml  (+1 more)
responses_api_models/local_vllm_model/tests/: test_app.py
responses_api_models/sglang_model/: README.md  _logic.py  app.py  client.py  diagnostic_vllm_vs_sglang.py  pyproject.toml  requirements.txt  tool_parsers.py
responses_api_models/sglang_model/configs/: ridger_glm51_fp8_endpoint.yaml  sglang_model.yaml  sglang_model_for_training.yaml
responses_api_models/sglang_model/tests/: test_app.py  test_logic.py  test_tool_parsers.py
responses_api_models/vllm_audio_model/: README.md  app.py  pyproject.toml
responses_api_models/vllm_audio_model/configs/: vllm_audio_model.yaml
responses_api_models/vllm_audio_model/tests/: test_app.py
responses_api_models/vllm_model/: README.md  app.py  audio_utils.py  client.py  dynamo_routing_policy.py  pyproject.toml  pyproject.toml.disable  routing_policy.py  sglang_tool_parsers.py
responses_api_models/vllm_model/configs/: eccn-llama-3.1-8b.yaml  vllm_model.yaml  vllm_model_completions.yaml  vllm_model_for_training.yaml  vllm_model_for_training_with_user.yaml  vllm_model_native_responses.yaml  vllm_model_native_responses_for_training.yaml  vllm_model_omni_mini.yaml  vllm_model_reasoning_budget.yaml
responses_api_models/vllm_model/tests/: round_trip_test_data.json  test_app.py  test_routing_policy.py  test_sglang_tool_parsers.py
(+5210 files in other folders)
