################################################
# Project
################################################

[project]
name = "NeMo-Gym"
version = "0.0.1"
license = {text = ""}
requires-python = ">=3.13"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    # OpenAI: We leverage OpenAI Responses, Chat Completions, and Completions schemas for Nemo Gym abstractions. It may also be used to directly query endpoints.
    # Updated Fri Jul 25, 2025
    "openai==1.97.1",
    # tqdm: Use for progress tracking on batch operations.
    # Updated Fri Jul 25, 2025
    "tqdm==4.67.1",
    # Pydantic: Used for typing and import/export.
    # Updated Fri Jul 25, 2025
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "devtools",
    # Asyncer: Used for making sync/async operations more resource efficient.
    # Updated Fri Jul 25, 2025
    "asyncer==0.0.8",
    # FastAPI: Used for server infrastructure
    # Updated Fri Jul 25, 2025
    "fastapi==0.116.1",
    # Uvicorn: Used to serve FastAPI apps
    # Updated Mon Jul 28, 2025
    "uvicorn==0.35.0",
    # UVLoop: a faster async event loop than Python's native asyncio.
    # Updated Fri Aug 01, 2025
    "uvloop==0.21.0",
    # Hydra and OmegaConf: CLI Configuration utilities
    # Updated Tue Jul 29, 2025
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    # Gradio: For simple frontend interfaces for viewing data
    # Updated Sun Aug 03, 2025
    "gradio==5.16.0",
    # MLFlow: used for interacting with the Gitlab model registry
    # Updated Tue Aug 05, 2025
    "mlflow==3.2.0",
]

[dependency-groups]
dev = [
    "ruff==0.12.5",
    "coverage[toml]==7.10.0",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.6.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "requests-mock==1.12.1",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "cache"

[project.scripts]
# Run/test scripts for servers.
nemo_gym_run = "nemo_gym.cli:run"
ng_run = "nemo_gym.cli:run"
nemo_gym_test = "nemo_gym.cli:test"
ng_test = "nemo_gym.cli:test"
nemo_gym_test_all = "nemo_gym.cli:test_all"
ng_test_all = "nemo_gym.cli:test_all"

# Dataset viewing
nemo_gym_viewer = "nemo_gym.dataset_viewer:main"
ng_viewer = "nemo_gym.dataset_viewer:main"

# Development convenience aliases.
nemo_gym_dev_test = "nemo_gym.cli:dev_test"
ng_dev_test = "nemo_gym.cli:dev_test"
nemo_gym_init_resources_server = "nemo_gym.cli:init_resources_server"
ng_init_resources_server = "nemo_gym.cli:init_resources_server"

# Trajectory collection
nemo_gym_collect_traj = "nemo_gym.trajectory_collection:collect_trajectories"
ng_collect_traj = "nemo_gym.trajectory_collection:collect_trajectories"

# Dataset management
nemo_gym_upload_dataset_to_gitlab = "nemo_gym.gitlab_utils:upload_jsonl_dataset_cli"
ng_upload_dataset_to_gitlab = "nemo_gym.gitlab_utils:upload_jsonl_dataset_cli"
nemo_gym_download_dataset_to_gitlab = "nemo_gym.gitlab_utils:download_jsonl_dataset_cli"
ng_download_dataset_to_gitlab = "nemo_gym.gitlab_utils:download_jsonl_dataset_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["resources_servers", "responses_api_agents", "responses_api_models", "nemo_gym"]

################################################
# Testing
################################################

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
cache_dir = "cache/.pytest_cache"
filterwarnings = "ignore::DeprecationWarning"
testpaths = "tests"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
command_line = "-m pytest --durations=10"
omit = [
    "tests/*",
    "temp*",
    "results/*",
]
data_file = "results/.coverage"

[tool.coverage.html]
directory = "results/htmlcov"

[tool.coverage.report]
skip_covered = true
sort = "miss"
fail_under = 95.0
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
]
omit = []

################################################
# Linting, formatting, and QOL
################################################
[tool.ruff]
cache-dir = "cache/.ruff_cache"
exclude = [
    "resources"
]
