################################################
# Project
################################################

[project]
name = "NeMo-Gym"
version = "0.0.1"
license = {text = ""}
requires-python = ">=3.13"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    ########################################
    # Every dependency listed here contains the following information:
    # 1. Why this dependency is here in NeMo Gym
    # 2. When this dependency was last updated
    # 3. The license of the dependencies.
    # 
    # If you are adding or removing dependencies, please do your due diligience to update this information. PRs to main that modify dependencies will not be accepted unless this information is provided.
    # The licenses of the below dependencies include: Apache 2.0, MIT, and BSD 3-Clause
    ########################################

    # OpenAI: We leverage OpenAI Responses, Chat Completions, and Completions schemas for Nemo Gym abstractions. It may also be used to directly query endpoints.
    # Updated Fri Jul 25, 2025
    # License: Apache 2.0 https://github.com/openai/openai-python/blob/a8258744cbecf51321587fc870e8920bd2c07809/LICENSE
    "openai==1.97.1",

    # tqdm: Use for progress tracking on batch operations.
    # Updated Fri Jul 25, 2025
    # License: MIT https://github.com/tqdm/tqdm/blob/0ed5d7f18fa3153834cbac0aa57e8092b217cc16/LICENCE
    "tqdm==4.67.1",

    # Pydantic: Used for typing and import/export.
    # Updated Fri Jul 25, 2025
    # pydantic license: MIT https://github.com/pydantic/pydantic/blob/1c79f0e4d3fbdb8b93e837175d7098e016117237/LICENSE
    # pydantic_core license: MIT https://github.com/pydantic/pydantic-core/blob/17cbe988de187701dd21d5cd2306086ced5a8872/LICENSE
    # devtools license: MIT https://github.com/samuelcolvin/python-devtools/blob/5022f1f6f1c55d871b1db208c9c1b2ab0df488fe/LICENSE
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "devtools",

    # FastAPI: Used for server infrastructure
    # Updated Fri Jul 25, 2025
    # License: MIT https://github.com/fastapi/fastapi/blob/6df50d40fe195adc026af169d6ebf298a1c183a5/LICENSE
    "fastapi==0.116.1",

    # Uvicorn: Used to serve FastAPI apps
    # Updated Mon Jul 28, 2025
    # License: BSD 3-Clause https://github.com/encode/uvicorn/blob/c1144fd4f130388cffc05ee17b08747ce8c1be11/LICENSE.md
    "uvicorn==0.35.0",

    # UVLoop: a faster async event loop than Python's native asyncio. Used automatically by Uvicorn as an async loop backend.
    # Updated Fri Aug 01, 2025
    # License: Apache 2.0 and MIT https://github.com/MagicStack/uvloop/blob/96b7ed31afaf02800d779a395591da6a2c8c50e1/LICENSE-APACHE https://github.com/MagicStack/uvloop/blob/96b7ed31afaf02800d779a395591da6a2c8c50e1/LICENSE-MIT
    "uvloop==0.21.0",

    # Hydra and OmegaConf: CLI Configuration utilities
    # Updated Tue Jul 29, 2025
    # hydra-core license: MIT https://github.com/facebookresearch/hydra/blob/737fc3349ef3a4031035645f7e8c80be66a57042/LICENSE
    # omegaconf license: BSD 3-Clause https://github.com/omry/omegaconf/blob/117f7de07285e4d1324b9229eaf873de15279457/LICENSE
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",

    # Gradio: For simple frontend interfaces for viewing data
    # Updated Sun Aug 03, 2025
    # License: Apache 2.0 https://github.com/gradio-app/gradio/blob/2b4432edea8a62659e180e24eedd2bddbed08e77/LICENSE
    "gradio==5.16.0",

    # MLFlow: used for interacting with the Gitlab model registry
    # Updated Tue Aug 05, 2025
    # License: Apache 2.0 https://github.com/mlflow/mlflow/blob/1510ed1bc92d3a4258973005d64f64a43136e251/LICENSE.txt
    "mlflow==3.2.0",
]

[dependency-groups]
dev = [
    # Ruff: Used for Python code formatting and linting.
    # Updated: Fri Jul 25, 2025
    # License: MIT https://github.com/astral-sh/ruff/blob/21ac16db85452c2c196d3b9cc61fb27b7b81f3f7/LICENSE
    "ruff==0.12.5",

    # Coverage: Used for Python code coverage.
    # Updated: Fri Jul 25, 2025
    # License: Apache 2.0 https://github.com/nedbat/coveragepy/blob/a2baa66b55ca71ea6b35009f2b4a51ff8fda1753/LICENSE.txt
    "coverage[toml]==7.10.0",

    # Pytest: Used for Python test orchestration.
    # Updated: Fri Jul 25, 2025
    # pytest-cov license: MIT https://github.com/pytest-dev/pytest-cov/blob/9d6d57c78627d4811fc473610d61a0b7225e4b40/LICENSE
    # pytest-xdist license: MIT https://github.com/pytest-dev/pytest-xdist/blob/2f1d80cb9d83ea2d91bba741ef5deffa9f8f85bf/LICENSE
    # pytest license: MIT https://github.com/pytest-dev/pytest/blob/5989efe3efec31a9d14f550d89903b6311dfc828/LICENSE
    # pytest-asyncio: Apache 2.0 https://github.com/pytest-dev/pytest-asyncio/blob/66b9f8e31f5f3c3bcf124a52f316516e70c90b46/LICENSE
    "pytest-cov==5.0.0",
    "pytest-xdist==3.6.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",

    # Requests-mock: Used in pytest asyncio
    # Updated: Fri Jul 25, 2025
    # License: Apache 2.0 https://github.com/jamielennox/requests-mock/blob/9742d02a8cad17276dbeba7b300b6d27ae1b6fb1/LICENSE
    "requests-mock==1.12.1",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "cache"

[project.scripts]
# Run/test scripts for servers.
nemo_gym_run = "nemo_gym.cli:run"
ng_run = "nemo_gym.cli:run"
nemo_gym_test = "nemo_gym.cli:test"
ng_test = "nemo_gym.cli:test"
nemo_gym_test_all = "nemo_gym.cli:test_all"
ng_test_all = "nemo_gym.cli:test_all"

# Dataset viewing
nemo_gym_viewer = "nemo_gym.dataset_viewer:main"
ng_viewer = "nemo_gym.dataset_viewer:main"

# Development convenience aliases.
nemo_gym_dev_test = "nemo_gym.cli:dev_test"
ng_dev_test = "nemo_gym.cli:dev_test"
nemo_gym_init_resources_server = "nemo_gym.cli:init_resources_server"
ng_init_resources_server = "nemo_gym.cli:init_resources_server"

# Trajectory collection
nemo_gym_collect_traj = "nemo_gym.trajectory_collection:collect_trajectories"
ng_collect_traj = "nemo_gym.trajectory_collection:collect_trajectories"

# Dataset management
nemo_gym_upload_dataset_to_gitlab = "nemo_gym.gitlab_utils:upload_jsonl_dataset_cli"
ng_upload_dataset_to_gitlab = "nemo_gym.gitlab_utils:upload_jsonl_dataset_cli"
nemo_gym_download_dataset_to_gitlab = "nemo_gym.gitlab_utils:download_jsonl_dataset_cli"
ng_download_dataset_to_gitlab = "nemo_gym.gitlab_utils:download_jsonl_dataset_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["resources_servers", "responses_api_agents", "responses_api_models", "nemo_gym"]

################################################
# Testing
################################################

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
cache_dir = "cache/.pytest_cache"
filterwarnings = "ignore::DeprecationWarning"
testpaths = "tests"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
command_line = "-m pytest --durations=10"
omit = [
    "tests/*",
    "temp*",
    "results/*",
]
data_file = "results/.coverage"

[tool.coverage.html]
directory = "results/htmlcov"

[tool.coverage.report]
skip_covered = true
sort = "miss"
fail_under = 95.0
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
]
omit = []

################################################
# Linting, formatting, and QOL
################################################
[tool.ruff]
cache-dir = "cache/.ruff_cache"
exclude = [
    "resources"
]
