# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "osworld-resources-server"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "nemo-gym[dev]",
    # This immutable revision supplies OSWorld's runtime dependencies. During
    # development of a newer remote_docker provider, put that OSWorld checkout
    # first on PYTHONPATH; replace this revision after the OSWorld change lands.
    "osworld @ https://github.com/JeffPengCoder/OSWorld/archive/31b76bf1c4d4e589238b314caa91470afc52651e.tar.gz",
    "requests-toolbelt~=1.0.0",
    "chardet<6",
    "cryptography",
    "cffi",
    "scipy",
    "numpy<2",
    "pynput",
    "ag2",
    "opencv-python-headless~=4.8.1.78",
    "Pillow~=11.0.0",
    "scikit-learn",
    "matplotlib~=3.7.4",
    "flask~=3.0.0",
    "func-timeout",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[tool.setuptools.packages.find]
where = ["../.."]
include = ["resources_servers.osworld*"]

[tool.uv.sources]
nemo-gym = { path = "../..", editable = true }

[tool.uv]
exclude-dependencies = ["opencv-python", "opencv-contrib-python", "agp-client"]
