# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0

[project]
name = "vlm-eval-kit-audio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nemo-gym[dev]",
    # prepare_data.py only (verify() needs neither):
    "pandas",
    "soundfile",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools-scm"]

[tool.setuptools.packages.find]
where = [".."]
include = ["vlm_eval_kit_audio"]

[tool.uv.sources]
nemo-gym = { path = "../..", editable = true }
