# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "osworld-agent"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "nemo-gym[dev]",
    # JeffPengCoder/OSWorld nv-gym at an immutable commit: upstream main
    # 83e85344 plus the nv-gym provider overlay and explicit proxy-runtime
    # repair. Use an archive because uv recursively initializes git
    # submodules, while optional SurferH submodules are not needed here.
    "osworld @ https://github.com/JeffPengCoder/OSWorld/archive/95dc83aad1670b8ef399d5e37e696619417dafd8.tar.gz",
    "docker==7.1.0",
    # Needed by OSWorld's mm_agents.pointer implementation.
    "anthropic",
    "boto3",
    "parallel-web",
    "requests-toolbelt~=1.0.0",
    # OSWorld currently pins requests<2.32; prevent RequestsDependencyWarning
    # when transitive deps pull chardet 7.x.
    "chardet<6",
    # Pin Ray to match the model server venv. Without this, ng_run can build
    # the two server venvs at different times and pull different Ray versions.
    "ray==2.55.1",
    # OSWorld imports these at runtime, but the repository-level Gym
    # pyproject excludes them globally to keep other server venvs lean. Keeping
    # this server on an agent-local pyproject lets uv install them here without
    # changing the global exclude-dependencies policy.
    "cryptography",
    "cffi",
    "scipy",
    "numpy<2",
    "pynput",
    "ag2",
    "opencv-python-headless~=4.8.1.78",
    "Pillow~=11.0.0",
    "scikit-learn",
    "matplotlib~=3.7.4",
    "flask~=3.0.0",
    "func-timeout",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[tool.setuptools.packages.find]
where = ["../.."]
include = ["responses_api_agents.osworld_agent*"]

[tool.uv.sources]
nemo-gym = { path = "../..", editable = true }

[tool.uv]
# Upstream's broad development dependency set includes the GUI OpenCV wheel
# and a SurferH-only git submodule. The OSWorld Gym server is headless and does
# not load SurferH, so keep those optional pieces outside the runtime while
# supplying opencv-python-headless explicitly above.
exclude-dependencies = ["opencv-python", "opencv-contrib-python", "agp-client"]
