# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "local-vllm-model"
dynamic = ["dependencies"]
version = "0.2.0rc0"
requires-python = ">=3.12"

[build-system]
build-backend = "setuptools.build_meta"
# NOTE: setuptools-scm is intentionally NOT required here. This package has a
# static version and an explicit packages.find, so it does not need scm's VCS
# file-finder — and on large repos on networked filesystems (e.g. Lustre) that
# finder shells out to `git ls-files --recurse-submodules` across the whole Gym
# tree, which times out (40s) and fails the per-server venv build.
requires = ["setuptools>=61"]

[tool.setuptools.packages.find]
where = [".."]
include = ["local_vllm_model"]

[tool.uv]
# <8.0.2 crashes on FastAPI>=0.137 pathless routes in vLLM /metrics. See vllm-project/vllm#45629
constraint-dependencies = [
    "prometheus-fastapi-instrumentator>=8.0.2",
]

[tool.uv.sources]
nemo-gym = { path = "../..", editable = true }

[tool.uv.pip]
torch-backend = "auto"
