# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "vllm-model"
version = "0.2.0rc0"
requires-python = ">=3.12"
dependencies = [
    "nemo-gym[dev]",
    # Needed by audio_utils.py when enable_audio_chunking is True. Imports
    # are lazy inside audio_utils so non-chunking deployments aren't forced
    # to drag soundfile/numpy in, but listing them here makes the chunking
    # path work out-of-the-box for audio benchmarks (asr_with_pc et al.).
    "numpy",
    "soundfile",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools-scm"]

[tool.setuptools.packages.find]
where = [".."]
include = ["vllm_model"]

[tool.uv.sources]
nemo-gym = { path = "../..", editable = true }
